# Smart-Restaurant-Ordering-System

./: README.md
smartrestaurantorderingsystem/backend/: .env.example  .gitignore  Dockerfile  QUICK_START.ps1  README.md  RESTART_DOCKER_AND_START.ps1  TESTING_SETUP.md  alembic.ini  create_test_db.py  docker-compose.yml  main.py  pyproject.toml  pytest.ini  railway.toml  render.yaml  requirements-test.txt  run_all_tests.ps1
smartrestaurantorderingsystem/backend/alembic/: env.py
smartrestaurantorderingsystem/backend/alembic/versions/: 001_initial_migration_create_all_tables.py
smartrestaurantorderingsystem/backend/app/: __init__.py  config.py  database.py  main.py  redis_client.py
smartrestaurantorderingsystem/backend/app/middleware/: __init__.py  auth.py  session.py
smartrestaurantorderingsystem/backend/app/models/: __init__.py  cart.py  menu_item.py  order.py  staff_user.py  table_session.py  user_profile.py
smartrestaurantorderingsystem/backend/app/recommendation/: README.md  __init__.py  collaborative.py  engine.py  fallback.py  manager.py  service.py
smartrestaurantorderingsystem/backend/app/routers/: __init__.py  auth.py  cart.py  menu.py  orders.py  recommendations.py  sessions.py  staff_menu.py  staff_orders.py  ws.py
smartrestaurantorderingsystem/backend/app/schemas/: auth.py  cart.py  menu.py  order.py  recommendation.py  session.py
smartrestaurantorderingsystem/backend/app/services/: README.md  __init__.py  auth_service.py  cart_service.py  menu_service.py  (+4 more)
smartrestaurantorderingsystem/backend/tests/: README.md  conftest.py  utils.py
(+117 files in other folders)
