[tool.poetry]
name = "smart-restaurant-ordering-system"
version = "0.1.0"
description = "Smart Restaurant Ordering System Backend"
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.109.0"
uvicorn = {extras = ["standard"], version = "^0.27.0"}
sqlalchemy = "^2.0.25"
asyncpg = "^0.29.0"
redis = "^5.0.1"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
bcrypt = "^4.1.2"
pydantic = "^2.5.3"
pydantic-settings = "^2.1.0"
alembic = "^1.13.1"
python-multipart = "^0.0.6"
websockets = "^12.0"
apscheduler = "^3.10.4"
scikit-learn = "^1.4.0"
numpy = "^1.26.3"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.4"
pytest-asyncio = "^0.23.3"
hypothesis = "^6.96.1"
httpx = "^0.26.0"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--strict-markers",
    "--tb=short",
    "--asyncio-mode=auto",
]
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "e2e: End-to-end tests",
    "property: Property-based tests",
]

[tool.hypothesis]
max_examples = 200
deadline = 5000
derandomize = false
print_blob = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
